src/objects/Referenciacion_y_verificacion__c.object
<CustomObject>
    <description>Identifica la información de los solicitantes para realizar el proceso de referenciación y verificación</description>
    <fields>
        <fullName>Auxiliar_de_riesgos_codeudor1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auxiliar de riesgos</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referenciaciones_y_verificaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Barrio_de_residencia__c</fullName>
        <label>Barrio de residencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barrio_de_residencia_codeudor1__c</fullName>
        <label>Barrio de residencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caja_de_compensacion__c</fullName>
        <label>Caja de compensación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caja_de_compensacion_cod1__c</fullName>
        <label>Caja de compensación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancela_oportunamente_codeudor1__c</fullName>
        <label>Cancela oportunamente el arriendo?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancela_oportunamente_codeudor2__c</fullName>
        <label>Cancela oportunamente el arriendo?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancela_oportunamente_codeudor3__c</fullName>
        <label>Cancela oportunamente el arriendo?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cargo_codeudor1__c</fullName>
        <label>Cargo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_codeudor2__c</fullName>
        <label>Cargo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_codeudor3__c</fullName>
        <label>Cargo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_de_quien_confirma_codeudor1__c</fullName>
        <label>Cargo de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_de_quien_confirma_codeudor2__c</fullName>
        <label>Cargo de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_de_quien_confirma_codeudor3__c</fullName>
        <label>Cargo de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_de_quien_confirma_comercial1__c</fullName>
        <label>Cargo de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_de_quien_confirma_comercial2__c</fullName>
        <label>Cargo de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_de_quien_confirma_comercial3__c</fullName>
        <label>Cargo de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_de_quien_confirma_la_ref_comercial__c</fullName>
        <label>Cargo de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_de_quien_confirma_la_referencia__c</fullName>
        <label>Cargo de quién confirma la referencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_deudor__c</fullName>
        <label>Cargo deudor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Casilla__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Casilla</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente deudor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referenciaciones y verificaciones</relationshipLabel>
        <relationshipName>Referenciaciones_y_verificaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referenciaciones y verificaciones (Codeudor 1)</relationshipLabel>
        <relationshipName>Referenciaciones_y_verificaciones1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referenciaciones y verificaciones (Codeudor 2)</relationshipLabel>
        <relationshipName>Referenciaciones_y_verificaciones2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referenciaciones y verificaciones (Codeudor 3)</relationshipLabel>
        <relationshipName>Referenciaciones_y_verificaciones3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Como_va_a_completar_el_restante__c</fullName>
        <label>Como va a completar el restante</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Como_va_a_completar_el_restante_cod1__c</fullName>
        <label>Como va a completar el restante</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Como_va_a_pagar_la_cuota_inicial__c</fullName>
        <label>Como va a pagar la cuota inicial?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Como_va_a_pagar_la_cuota_inicial_cod1__c</fullName>
        <label>Como va a pagar la cuota inicial?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_cuanto_dinero_lo_separo__c</fullName>
        <label>Con cuanto dinero lo separo?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_cuanto_dinero_lo_separo_cod1__c</fullName>
        <label>Con cuanto dinero lo separo?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_quien_se_postulo__c</fullName>
        <label>Con quien se postulo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_quien_se_postulo_cod1__c</fullName>
        <label>Con quien se postulo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirma_valor_de_la_cuota_que_solicita__c</fullName>
        <label>¿Confirma valor cuota que solicita?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_estado_civil_codeudor1__c</fullName>
        <label>Cual es el estado civil del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_estado_civil_codeudor2__c</fullName>
        <label>Cual es el estado civil del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_estado_civil_codeudor3__c</fullName>
        <label>Cual es el estado civil del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_estado_civil_del_senor_a_del__c</fullName>
        <label>Cual es el estado civil del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_estado_civil_familiar__c</fullName>
        <label>Cual es el estado civil del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_estado_familiar_codeudor1__c</fullName>
        <label>Cual es el estado civil del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_estado_familiar_codeudor3__c</fullName>
        <label>Cual es el estado civil del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_estado_familiar_codeudor_2__c</fullName>
        <label>Cual es el estado civil del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_valor_de_compras_codeudor1__c</fullName>
        <label>Cuál es el valor de compras que realiza?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_valor_de_compras_codeudor2__c</fullName>
        <label>Cuál es el valor de compras que realiza?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_valor_de_compras_codeudor3__c</fullName>
        <label>Cuál es el valor de compras que realiza?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_valor_de_compras_que_realiza__c</fullName>
        <inlineHelpText>Cuanto es el el valor de compras al mes</inlineHelpText>
        <label>Cuál es el valor de compras que realiza?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cual_es_el_valor_del_credito__c</fullName>
        <label>¿Cual es el valor del crédito?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cual_es_la_actividad_del_senor_a__c</fullName>
        <label>Cual es la actividad del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_la_actividad_del_senor_codeudor1__c</fullName>
        <label>Cual es la actividad del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_la_actividad_del_senor_codeudor2__c</fullName>
        <label>Cual es la actividad del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_la_actividad_del_senor_codeudor3__c</fullName>
        <label>Cual es la actividad del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_la_actividad_del_senor_familiar__c</fullName>
        <label>Cual es la actividad del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_la_actividad_familiar_codeudor1__c</fullName>
        <label>Cual es la actividad del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_la_actividad_familiar_codeudor2__c</fullName>
        <label>Cual es la actividad del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_la_actividad_familiar_codeudor3__c</fullName>
        <label>Cual es la actividad del señor(a)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_tiene_a_cargo__c</fullName>
        <label>Cuantas personas tiene a cargo?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_tiene_a_cargo_codeudor1__c</fullName>
        <label>Cuantas personas tiene a cargo?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_tiene_a_cargo_codeudor2__c</fullName>
        <label>Cuantas personas tiene a cargo?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_tiene_a_cargo_codeudor3__c</fullName>
        <label>Cuantas personas tiene a cargo?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_tiene_familar_codeudor1__c</fullName>
        <label>Cuantas personas tiene a cargo?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_tiene_familar_codeudor3__c</fullName>
        <label>Cuantas personas tiene a cargo?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_tiene_familia_codeudor2__c</fullName>
        <label>Cuantas personas tiene a cargo?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_viven_codeudor1__c</fullName>
        <label>Cuantas personas viven en arriendo allí?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_viven_codeudor2__c</fullName>
        <label>Cuantas personas viven en arriendo allí?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_viven_codeudor3__c</fullName>
        <label>Cuantas personas viven en arriendo allí?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_viven_en_arriendo__c</fullName>
        <label>Cuantas personas viven en arriendo?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_viven_en_arriendo_alli__c</fullName>
        <label>Cuantas personas viven en arriendo allí?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_viven_en_arriendo_cod1__c</fullName>
        <label>Cuantas personas viven en arriendo?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuanto_cancela_de_arriendo__c</fullName>
        <label>Cuánto cancela de arriendo ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cuanto_cancela_de_arriendo_codeudor1__c</fullName>
        <label>Cuanto cancela de arriendo ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cuanto_cancela_de_arriendo_codeudor2__c</fullName>
        <label>Cuanto cancela de arriendo ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cuanto_cancela_de_arriendo_codeudor3__c</fullName>
        <label>Cuanto cancela de arriendo ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cuanto_lleva_la_empresa_constituida__c</fullName>
        <label>Hace cuánto está constituida la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuanto_tiene_ahorrado__c</fullName>
        <label>Cuanto tiene ahorrado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuanto_tiene_ahorrado_cod1__c</fullName>
        <label>Cuanto tiene ahorrado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantos_empleados_codeudor1__c</fullName>
        <label>Cuantos empleados tiene la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantos_empleados_codeudor3__c</fullName>
        <label>Cuantos empleados tiene la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantos_empleados_maneja_codeudor2__c</fullName>
        <label>Cuantos empleados maneja la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantos_empleados_maneja_comercial3__c</fullName>
        <label>Cuantos empleados maneja la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantos_empleados_maneja_la_empresa__c</fullName>
        <label>Cuántos empleados maneja la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantos_empleados_tiene_la_empresa__c</fullName>
        <label>Cuantos empleados tiene la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuenta_con_subsidio__c</fullName>
        <label>Cuenta con subsidio?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuenta_con_subsidio_cod1__c</fullName>
        <label>Cuenta con subsidio?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desde_hace_cuanto_codeudor1__c</fullName>
        <label>Desde hace cuanto le tiene arrendado?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desde_hace_cuanto_codeudor2__c</fullName>
        <label>Desde hace cuanto le tiene arrendado?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desde_hace_cuanto_codeudor3__c</fullName>
        <label>Desde hace cuanto le tiene arrendado?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desde_hace_cuanto_le_tiene_arrendado__c</fullName>
        <label>Desde hace cuanto le tiene arrendado?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_de_la_vivienda__c</fullName>
        <label>Direccion de la vivienda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_de_la_vivienda_codeudor1__c</fullName>
        <label>Dirección de la vivienda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_de_la_vivienda_codeudor2__c</fullName>
        <label>Direccion de la vivienda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_de_la_vivienda_codeudor3__c</fullName>
        <label>Direccion de la vivienda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edad2__c</fullName>
        <label>Edad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edad3__c</fullName>
        <label>Edad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edad__c</fullName>
        <label>Edad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edad_personal_2__c</fullName>
        <label>Edad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edad_personal_3__c</fullName>
        <label>Edad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edad_personal_codeudor1__c</fullName>
        <label>Edad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>El_arriendo_incluye_servicios_codeudor1__c</fullName>
        <label>El arriendo incluye servicios y admon?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>El_arriendo_incluye_servicios_codeudor2__c</fullName>
        <label>El arriendo incluye servicios y admon?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>El_arriendo_incluye_servicios_codeudor3__c</fullName>
        <label>El arriendo incluye servicios y admon?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>El_arriendo_incluye_servicios_y_admon__c</fullName>
        <label>El arriendo incluye servicios y admon?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entidad_del_credito_actual__c</fullName>
        <label>¿Entidad del crédito actual?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bancamía</fullName>
                </value>
                <value>
                    <fullName>Banco Agrario</fullName>
                </value>
                <value>
                    <fullName>Banco AV Villas</fullName>
                </value>
                <value>
                    <fullName>Banco BBVA</fullName>
                </value>
                <value>
                    <fullName>Banco Caja Social</fullName>
                </value>
                <value>
                    <fullName>Banco Colpatria</fullName>
                </value>
                <value>
                    <fullName>Banco Compartir</fullName>
                </value>
                <value>
                    <fullName>Banco Coomeva</fullName>
                </value>
                <value>
                    <fullName>Banco Cooperativo Coopcentral</fullName>
                </value>
                <value>
                    <fullName>Banco Corpbanca</fullName>
                </value>
                <value>
                    <fullName>Banco Davivienda</fullName>
                </value>
                <value>
                    <fullName>Banco de Bogotá</fullName>
                </value>
                <value>
                    <fullName>Banco de Occidente</fullName>
                </value>
                <value>
                    <fullName>Banco Falabella</fullName>
                </value>
                <value>
                    <fullName>Banco Finandina</fullName>
                </value>
                <value>
                    <fullName>Banco Multibank</fullName>
                </value>
                <value>
                    <fullName>Banco Mundo Mujer</fullName>
                </value>
                <value>
                    <fullName>Banco Pichincha</fullName>
                </value>
                <value>
                    <fullName>Banco Popular</fullName>
                </value>
                <value>
                    <fullName>Banco Procredit</fullName>
                </value>
                <value>
                    <fullName>Banco WWB</fullName>
                </value>
                <value>
                    <fullName>Bancolombia</fullName>
                </value>
                <value>
                    <fullName>Confiar Cooperativa Financiera</fullName>
                </value>
                <value>
                    <fullName>Coofinep Cooperativa Financiera</fullName>
                </value>
                <value>
                    <fullName>Cooperativa Financiera Cotrafa</fullName>
                </value>
                <value>
                    <fullName>Cooperativa Financiera de Antioquia</fullName>
                </value>
                <value>
                    <fullName>Cooperativa Financiera JFK</fullName>
                </value>
                <value>
                    <fullName>Corficolombiana</fullName>
                </value>
                <value>
                    <fullName>Fiduciaria La Previsora</fullName>
                </value>
                <value>
                    <fullName>Financiera Juriscoop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Es_empleado_independiente_cod1__c</fullName>
        <label>Es empleado, independiente o pensionado?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Es_empleado_independiente_o_pensionado__c</fullName>
        <label>Es empleado, independiente o pensionado?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_del_subsidio__c</fullName>
        <label>Estado del subsidio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_del_subsidio_cod1__c</fullName>
        <label>Estado del subsidio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_codeudor1__c</fullName>
        <label>Fecha</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_codeudor2__c</fullName>
        <label>Fecha</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_codeudor3__c</fullName>
        <label>Fecha</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_de_inicio_de_contrato_codeudor1__c</fullName>
        <label>Fecha de inicio de contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_inicio_del_contrato__c</fullName>
        <label>Fecha de inicio del contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_inicio_del_contrato_codeudor3__c</fullName>
        <label>Fecha de inicio del contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_nacimiento_cliente_deudor__c</fullName>
        <label>Fecha de nacimiento cliente deudor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_del_inicio_del_contrato_codeudor2__c</fullName>
        <label>Fecha del inicio del contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_esta_constituida_comercial1__c</fullName>
        <label>Hace cuanto esta constituida la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_esta_constituida_comercial2__c</fullName>
        <label>Hace cuánto está constituida la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_esta_constituida_comercial3__c</fullName>
        <label>Hace cuanto esta constituida la empresa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_esta_constituida_la_empresa__c</fullName>
        <label>Hace cuánto está constituida la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_esta_la_empresa_codeudor1__c</fullName>
        <label>Hace cuanto esta la empresa constituida?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_esta_la_empresa_codeudor2__c</fullName>
        <label>Hace cuanto esta la empresa constituida?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_esta_la_empresa_codeudor3__c</fullName>
        <label>Hace cuanto esta la empresa constituida?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_tiempo_familiar_codeudor1__c</fullName>
        <label>Hace cuanto tiempo lo conoce ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_tiempo_familiar_codeudor2__c</fullName>
        <label>Hace cuanto tiempo lo conoce ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_tiempo_familiar_codeudor3__c</fullName>
        <label>Hace cuanto tiempo lo conoce ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_tiempo_lo_conoce__c</fullName>
        <label>Hace cuanto tiempo lo conoce ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_tiempo_lo_conoce_codeudor1__c</fullName>
        <label>Hace cuanto tiempo lo conoce ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_tiempo_lo_conoce_codeudor2__c</fullName>
        <label>Hace cuanto tiempo lo conoce ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_tiempo_lo_conoce_codeudor3__c</fullName>
        <label>Hace cuanto tiempo lo conoce ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_tiempo_lo_conoce_familiar__c</fullName>
        <label>Hace cuanto tiempo lo conoce ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_tiene_vinculo_codeudor1__c</fullName>
        <label>Hace cuanto tiene vinculo con la persona</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_tiene_vinculo_codeudor2__c</fullName>
        <label>Hace cuanto tiene vinculo con la persona</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_tiene_vinculo_codeudor3__c</fullName>
        <label>Hace cuanto tiene vinculo con la persona</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hace_cuanto_tiene_vinculo_con_la_persona__c</fullName>
        <label>Hace cuanto tiene vínculo con la persona</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Radicacion__c</fullName>
        <label>Id Radicación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>La_empresa_a_que_se_dedica__c</fullName>
        <label>La empresa a que se dedica?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>La_empresa_a_que_se_dedica_codeudor1__c</fullName>
        <label>La empresa a que se dedica?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>La_empresa_a_que_se_dedica_codeudor2__c</fullName>
        <label>La empresa a que se dedica?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>La_empresa_a_que_se_dedica_codeudor3__c</fullName>
        <label>La empresa a que se dedica?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>La_empresa_a_que_se_dedica_comercial2__c</fullName>
        <label>La empresa a que se dedica?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>La_empresa_a_que_se_dedica_comercial3__c</fullName>
        <label>La empresa a que se dedica?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>La_forma_de_pago_es_codeudor1__c</fullName>
        <label>La forma de pago es crédito o contado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Contado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>La_forma_de_pago_es_codeudor2__c</fullName>
        <label>La forma de pago es crédito o contado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Contado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>